<resources>
    <string name="app_name">CIAO</string>

    <string name="news">News</string>
    <string name="popularization">Popularization</string>
    <string name="digital">Digital</string>
    <string name="science">Science</string>
    <string name="culture">Culture</string>
    <string name="history">History</string>
    <string name="geography">Geography</string>
    <string name="politics">Politics</string>
    <string name="sport">Sport</string>
    <string name="browse">Browse</string>
    <string name="nearby">Nearby</string>
    <string name="theme">Theme</string>
    <string name="system">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="article">Article</string>
    <string name="video">Video</string>
    <string name="guest">Guest</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="no_account">Don\'t have an account yet ?</string>
    <string name="continue_guest">Continue as Guest</string>
    <string name="have_account">Have an account ?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="gps">GPS sensor</string>
    <string name="manual">Manual</string>
    <string name="application">Application</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="location">Location</string>
    <string name="authors">Authors</string>
    <string name="source_code">Source code</string>
    <string name="version">Version</string>
    <string name="login_register">Login or register</string>
    <string name="login_register_summary">For a better user experience</string>
    <string name="logout">Logout</string>
    <string name="logout_summary">Bye !</string>
    <string name="set_location">Set location</string>
    <string name="undefined">Undefined</string>
    <string name="server_error">Server error</string>
    <string name="check_email">Please check your mailbox to activate your account</string>
    <string name="wrong_password">Wrong password</string>
    <string name="user_not_found">User not found</string>
    <string name="user_exists">User already exists</string>
    <string name="invalid_username_email">Invalid username or email</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="perm_granted">Permission granted</string>
    <string name="perm_denied">Permission denied</string>
    <string name="location_summary">Adds an \"Nearby\" section</string>
    <string name="error">Error</string>
    <string name="error_message">Status : %1$s\nMessage : %2$s</string>
    <string name="loading">Loading</string>
    <string name="loading_message">Please wait...</string>
    <string name="search_results">Results for \"%1$s\"</string>
    <string name="sort_latest">Latest</string>
    <string name="sort_za">Z-A</string>
    <string name="sort_az">A-Z</string>
    <string name="sort_oldest">Oldest</string>
    <string name="error_video">Error loading video</string>
    <string name="error_article">Error loading article</string>
    <string name="error_network">Please check your internet connection, then restart CIAO</string>
    <string name="not_valid_username">Username can\'t be empty</string>
    <string name="not_valid_email">Email must look like something@domain.com</string>
    <string name="not_valid_password">Password must be at least 8 characters and contains at least 1 lower-case letter, 1 upper-case letter, 1 number and 1 special character (!*@#$&amp;)</string>
    <string name="not_valid_conf_password">Confirmation password must match password</string>
    <string name="error_gps">Failed retrieving your location</string>
    <string name="tags">Tags :</string>
    <string name="error_retry">Please retry</string>
    <string name="yes">Yes</string>
    <string name="later">Later</string>
    <string name="new_update">New update</string>
    <string name="downloading">Downloading</string>
    <string name="update_message">Do you want to update ?\n\nVersion : %1$s\nChangelog :\n%2$s</string>
    <string name="notifications_restored">Restored notifications</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Notifies you when a new production matching your centers of interest is released</string>
    <string name="new_production">A new production is out</string>
    <string name="tag_checked">✔</string>
    <string name="production_author">Author : %1$s</string>
    <string name="production_location">Location : %1$s</string>
    <string name="success">Success</string>
    <string name="authors_summary">GitHub :<b>\n@ChrisB822\n@Klbgr\n@oanikienko\n@Viklaj</b></string>
    <string name="avatar_wrong_format">Please chose a JPG, PNG or GIF file</string>
    <string name="change_avatar">Change avatar</string>
    <string name="change_avatar_summary">Be yourself !</string>
    <string name="production">Production</string>
    <string name="latest_productions">Latest productions</string>
    <string name="avatar_success">Please restart CIAO to apply changes</string>
    <string name="production_not_found">Production not found</string>
    <string name="change_username">Change username</string>
    <string name="change_username_summary">Stay anonymous !</string>
    <string name="username_not_available">Chosen username is not available</string>
    <string name="advanced">Advanced</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_summary">To reload everything</string>
</resources>