<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_browse">

    <fragment
        android:id="@+id/nav_browse"
        android:name="com.ciao.app.fragment.BrowseFragment"
        android:label="@string/browse" />

    <fragment
        android:id="@+id/nav_around"
        android:name="com.ciao.app.fragment.AroundFragment"
        android:label="@string/around" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.ciao.app.fragment.NewsFragment"
        android:label="@string/news" />

    <fragment
        android:id="@+id/nav_popularization"
        android:name="com.ciao.app.fragment.PopularizationFragment"
        android:label="@string/popularization"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_digital"
        android:name="com.ciao.app.fragment.DigitalFragment"
        android:label="@string/digital"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/nav_science"
        android:name="com.ciao.app.fragment.ScienceFragment"
        android:label="@string/science"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/nav_culture"
        android:name="com.ciao.app.fragment.CultureFragment"
        android:label="@string/culture"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.ciao.app.fragment.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/nav_geography"
        android:name="com.ciao.app.fragment.GeographyFragment"
        android:label="@string/geography"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/nav_politics"
        android:name="com.ciao.app.fragment.PoliticsFragment"
        android:label="@string/politics"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/nav_sport"
        android:name="com.ciao.app.fragment.SportFragment"
        android:label="@string/sport"
        tools:layout="@layout/fragment_main" />
</navigation>